423: fix dashboard collapse control

--- a/scss/civicrm/dashboard/pages/_view-dashboard.scss
+++ b/scss/civicrm/dashboard/pages/_view-dashboard.scss
@@ -9,6 +9,10 @@
       .crm-i {
         opacity: 1;
       }
+
+      .widget-header {
+        margin-left: 25px;
+      }
     }
 
     .widget-content {
